# runequest

./: .gitignore  ARCHITECTURE.md  Cargo.toml  package-lock.json  package.json  playwright.config.ts
deploy/: runequest.service
src/: error.rs  lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  user_store.rs
src/engine/: abilities.rs  actions.rs  adventure.rs  backgrounds.rs  character.rs  combat.rs  conditions.rs  crafting.rs  dice.rs  drops.rs  dungeon.rs  equipment.rs  exchange.rs  executor.rs  guild.rs  inventory.rs  mod.rs  monsters.rs  npc.rs  party.rs  rate_limit.rs  shop.rs  simulator.rs  skills.rs  tower.rs  world.rs  world_map.rs  worldgen.rs
src/llm/: client.rs  images.rs  mod.rs  pricing.rs  prompts.rs  tools.rs  types.rs
src/storage/: adventure_store.rs  exchange_store.rs  friends_store.rs  guild_store.rs  mod.rs  shop_store.rs  tower_store.rs  usage_logger.rs
src/web/: api_server.rs  mod.rs  party_handler.rs  party_registry.rs  presence.rs  protocol.rs  server.rs  session.rs  static_files.rs  trade_registry.rs  websocket.rs  wiki_server.rs
static/: index.html  login.html
static/css/: adventure.css  components.css  theme.css
static/js/: adventure.js  api.js  app.js  combat.js  friends.js  location-chat.js  party.js  select.js  settings.js  ws.js
tests/: account.spec.ts  actions.spec.ts  adventure.spec.ts  bugfix.spec.ts  choices.spec.ts  dungeon.spec.ts  engine.spec.ts  equip-ui.spec.ts  features.spec.ts  login.spec.ts  ratelimit.spec.ts  shop.spec.ts  world.spec.ts
wiki/: index.md
wiki/api/: crafting.md  images.md  rest.md  (+2 more)
(+18 files in other folders)
